kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-api
  namespace: mlops
  labels:
    app: churn-api
spec:
  type: ClusterIP
  selector:
    app: churn-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
